# cow-compiler

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  virtualmachine.cpp  virtualmachine.hpp
src/: keywords.cpp  keywords.hpp  main.cpp  virtualmachine.hpp
test/: test_main.cpp
